--- a/public/css/auction.css
+++ b/public/css/auction.css
@@ -36,3 +36,28 @@ th, td {
     padding: 5px;
     text-align: left;
 }
+
+/* Add to your CSS file */
+.price-info {
+    margin: 15px 0;
+  }
+  
+  .direct-price {
+    color: #2c3e50;
+    font-size: 1.2em;
+    font-weight: bold;
+  }
+  
+  .auction-price {
+    color: #e67e22;
+    font-size: 1em;
+  }
+  
+  .price-display p {
+    margin: 8px 0;
+    padding: 5px;
+    border-radius: 4px;
+  }
+  
+
+
