--- a/views/subscriptionSwapping/add-product.ejs
+++ b/views/subscriptionSwapping/add-product.ejs
@@ -26,11 +26,11 @@
         <input type="text" name="imageUrl" id="imageUrl" required>
       </div>
       <div class="form-control">
-        <label for="price">Price on direct purchase</label>
+        <label for="price">Direct Purchase Price</label>
         <input type="number" name="price" id="price" step="0.01" required>
       </div>
       <div class="form-control">
-        <label for="min_price">Minimum Price on auction</label>
+        <label for="min_price">Minimum Auction Price</label>
         <input type="number" name="min_price" id="min_price" step="0.01" required>
       </div>
       <div class="form-control">
@@ -46,7 +46,7 @@
         <textarea name="description" id="description" rows="5" required></textarea>
       </div>
 
-      <button class="btn" type="submit">Add Product</button>
+      <button class="btn" type="submit">Next →</button>
     </form>
   </main>
   <!-- nnn -->
