--- a/views/rentals/post-product.ejs
+++ b/views/rentals/post-product.ejs
@@ -16,16 +16,21 @@
     <%- include('../common/navigation.ejs') %>
 
     <main>
-        <form class="product-form" action="/rental/post" method="POST">
+        <form class="product-form" action="/rental/post" method="POST" enctype="multipart/form-data">
             <div class="form-control">
                 <label for="title">Title</label>
                 <input type="text" name="title" id="title" required>
             </div>
 
-            <div class="form-control">
+            <!-- <div class="form-control">
                 <label for="imageUrl">Upload image</label>
                 <input type="text" name="imageUrl" id="imageUrl" required>
+            </div> -->
+            <div class="form-control">
+                <label for="image">Upload Image</label>
+                <input type="file" name="image" id="image" accept="image/*" required>
             </div>
+            
 
             <!-- Dropdown for rate options -->
             <div class="form-control">
