--- a/views/subscriptionSwapping/add-product.ejs
+++ b/views/subscriptionSwapping/add-product.ejs
@@ -16,7 +16,7 @@
   <%- include('../common/navigation.ejs') %>
 
   <main>
-    <form class="product-form" action="/subscription/sell" method="POST">
+    <form class="product-form" action="/subscription/sell/add-product" method="POST">
       <div class="form-control">
         <label for="platform_name">Platform Name</label>
         <input type="text" name="platform_name" id="platform_name" required>
@@ -26,7 +26,7 @@
         <input type="text" name="imageUrl" id="imageUrl" required>
       </div>
       <div class="form-control">
-        <label for="price">Direct Purchase Price</label>
+        <label for="price">Actual Price</label>
         <input type="number" name="price" id="price" step="0.01" required>
       </div>
       <div class="form-control">
