--- a/views/subscriptionSwapping/subscriptionHome.ejs
+++ b/views/subscriptionSwapping/subscriptionHome.ejs
@@ -23,14 +23,14 @@
         <div class="options">
             <div class="option">
                 <h2>Want to Post an OTT subscription?</h2>
-                <p>List your ott Subscriptions for sale and find interested buyers easily</p>
-                <button onclick="window.location.href='/subscription/sell'">Post an ott platform to Sell</button>
+                <p>List your OTT Subscriptions for sale and find interested buyers easily</p>
+                <button onclick="window.location.href='/subscription/sell'">Post an OTT Subscription to Sell</button>
             </div>
 
             <div class="option">
                 <h2>Want to access an OTT subscription?</h2>
-                <p>Browse available ott subscriptions and get what you need</p>
-                <button onclick="window.location.href='/subscription/buy'">Access an OTT subsciption</button>
+                <p>Browse available OTT subscriptions and get what you need</p>
+                <button onclick="window.location.href='/subscription/buy'">Browse OTT Subsciptions</button>
             </div>
         </div>
     </div>
