--- a/public/css/product.css
+++ b/public/css/product.css
@@ -7,12 +7,12 @@ body {
 }
 
 .product-form {
-    width: 36rem;
+    width: 65rem;
     max-width: 90%;
     margin: auto;
     display: block;
     margin-top: 40pt;
-    padding: 2.5rem;
+    padding: 3rem;
     background: #ffffff; /* Light background for contrast */
     border-radius: 8px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
@@ -50,7 +50,9 @@ body {
     display: block;
     font-weight: bold;
     margin-bottom: 0.3rem;
-    font-size: medium;
+    font-size: 20px;
+    text-align: left;
+    padding-left: 2%;
 }
 
 .form-control input,
@@ -74,7 +76,7 @@ body {
 
 .btn {
     width: 100%;
-    padding: 0.7rem; 
+    padding: 14px 30px; 
     background-color: #3E6B48; 
     color: white;
     border: none;
