--- a/views/rentals/rent-items.ejs
+++ b/views/rentals/rent-items.ejs
@@ -15,7 +15,7 @@
   </div>
 
   <main>
-    <h1>Rental Products</h1>
+    <h1>Rental Products</h1></br>
     <form action="/rental/rent" method="GET" class="search-form">
       <input 
         type="text" 
@@ -23,8 +23,10 @@
         placeholder="Search products by title, description, or location..."
         value="<%= searchQuery || '' %>"
       >
-      <button type="submit">Search</button>
+      <button type="submit">Search</button> 
+      
     </form>
+    <button type="button" onclick="window.location.href='/rental/post'">POST AN ITEM !</button>
     
     <% if (products && products.length > 0) { %>
       <div class="rental-list">
