--- a/views/subscriptionSwapping/addBidProduct.ejs
+++ b/views/subscriptionSwapping/addBidProduct.ejs
@@ -10,7 +10,7 @@
     </title>
     <link rel="stylesheet" href="/css/main.css">
     <link rel="stylesheet" href="/css/forms.css">
-    <!-- <link rel="stylesheet" href="/css/product.css"> -->
+    <link rel="stylesheet" href="/css/product.css">
     <link rel="stylesheet" href="/css/navigation.css">
 </head>
 
@@ -25,7 +25,7 @@
                 </div>
                 <div class="form-control">
                     <label for="imageUrl">Upload image</label>
-                    <input type="text" name="imageUrl" id="imageUrl">
+                    <input type="file" name="image" id="image" accept="image/*" required>
                 </div>
                 <div class="form-control">
                     <label for="description">Description</label>
