--- a/views/subscriptionSwapping/direct-add-product.ejs
+++ b/views/subscriptionSwapping/direct-add-product.ejs
@@ -24,10 +24,10 @@
         <label for="price">Price</label>
         <input type="number" name="price" step="0.01" required>
       </div>
-      <div class="form-control">
+      <!-- <div class="form-control">
         <label for="quantity">Quantity</label>
         <input type="number" name="quantity" min="1" required>
-      </div>
+      </div> -->
       <div class="form-control">
         <label for="description">Description</label>
         <textarea name="description" rows="5" required></textarea>
