--- a/views/rentals/post-product.ejs
+++ b/views/rentals/post-product.ejs
@@ -26,9 +26,13 @@
                 <label for="imageUrl">Upload image</label>
                 <input type="text" name="imageUrl" id="imageUrl" required>
             </div> -->
-            <div class="form-control">
+            <!-- <div class="form-control">
                 <label for="image">Upload Image</label>
                 <input type="file" name="image" id="image" accept="image/*" required>
+            </div> -->
+            <div class="form-control">
+                <label for="image">Upload Image</label>
+                <input type="file" name="images" id="images" accept="image/*" multiple required>
             </div>
             
 
